--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="assets/codoacodo.png" alt="Logo codo a codo">
         Conf Bs As
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -39,7 +39,7 @@
             <a href="#form" class="nav-link">Conviértete en orador</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link text-tickets">Comprar tickets</a>
+            <a href="#buy-tickets" class="nav-link text-tickets">Comprar tickets</a>
           </li>
         </ul>
       </nav>
@@ -66,7 +66,7 @@
                   <h1>Conf Bs As</h1>
                   <p class="d-none d-md-block">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estáan creando el futuro de Intenet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!!</p>
                   <a href="#form" class="btn btn-outline-light">Quiero ser orador</a>
-                  <button type="button" class="btn btn-success">Comprar tickets</button>
+                  <a href="#buy-tickets" class="btn btn-success">Comprar tickets</a>
                 </div>
               </div>
             </div>
@@ -83,8 +83,8 @@
             <h2>Oradores</h2>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="row justify-content-center">
+          <div class="col-8 col-md-6 col-lg-4 mb-4">
             <div class="card">
               <img class="card-img-top" src="assets/steve.jpg" alt="Foto de Steve Jobs">
               <div class="card-body">
@@ -97,7 +97,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="col-8 col-md-6 col-lg-4 mb-4">
             <div class="card">
               <img class="card-img-top" src="assets/bill.jpg" alt="Foto de Bill Gates">
               <div class="card-body">
@@ -110,7 +110,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="col-8 col-md-6 col-lg-4 mb-4">
             <div class="card">
               <img class="card-img-top" src="assets/ada.jpeg" alt="Foto de Ada Lovelace">
               <div class="card-body">
@@ -159,7 +159,7 @@
         <div class="row">
           <form class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2 pt-2">
             <div class="row mb-3">
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-6 mb-1">
                 <input type="text" class="form-control" placeholder="Nombre">
               </div>
               <div class="col-12 col-md-6">
@@ -181,12 +181,83 @@
         </div>
       </div>
     </section>
+
+    <section id="buy-tickets" class="d-none pt-5 pb-3">
+      <div class="container">
+        <div class="row text-center justify-content-center col-md-10 offset-md-1 col-lg-8 offset-lg-2 p-2">
+          <div class="col-8 col-md-6 col-lg-4 p-1">
+            <div class="border border-primary p-3">
+              <h5 class="mb-2">Estudiante</h5>
+              <p class="mb-3">Tienen un descuento</p>
+              <p class="fw-bold mb-3">80%</p>
+              <p class="small-text text-muted">* presentar documentación</p>
+            </div>
+          </div>
+          <div class="col-8 col-md-6 col-lg-4 p-1">
+            <div class="border border-info p-3">
+              <h5 class="mb-2">Trainee</h5>
+              <p class="mb-3">Tienen un descuento</p>
+              <p class="fw-bold mb-3">50%</p>
+              <p class="small-text text-muted">* presentar documentación</p>
+            </div>
+          </div>
+          <div class="col-8 col-md-6 col-lg-4 p-1">
+            <div class="border border-warning p-3">
+              <h5 class="mb-2">Junior</h5>
+              <p class="mb-3">Tienen un descuento</p>
+              <p class="fw-bold mb-3">15%</p>
+              <p class="small-text text-muted">* presentar documentación</p>
+            </div>
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col text-uppercase text-center">
+            <small>Venta</small>
+            <h2>Valor de ticket $200</h2>
+          </div>
+        </div>
+        <form class="row col-md-10 offset-md-1 col-lg-8 offset-lg-2 pt-2 g-3">
+          <div class="col-md-6">
+            <input type="text" class="form-control" placeholder="Nombre">
+          </div>
+          <div class="col-md-6">
+            <input type="text" class="form-control" placeholder="Apellido">
+          </div>
+          <div class="col-12">
+            <input type="email" class="form-control" placeholder="Correo">
+          </div>
+          <div class="col-md-6">
+            <label for="inputCantidad" class="form-label">Cantidad</label>
+            <input type="number" class="form-control" id="inputCantidad" min="0" placeholder="cantidad">
+          </div>
+          <div class="col-md-6">
+            <label for="inputCategoria" class="form-label">Categoria</label>
+            <select id="inputCategoria" class="form-select">
+              <option selected>Ninguna</option>
+              <option>Estudiante</option>
+              <option>Trainee</option>
+              <option>Junior</option>
+            </select>
+          </div>
+          <div class="col-12">
+            <p class="pagar-tickets p-2 ps-3 mt-2 mb-2">Total a Pagar: $<span id="total">0</span></p>
+          </div>
+          <div class="col-md-6 d-grid">
+            <button type="button" class="btn btn-success" onclick="borrar()">Borrar</button>
+          </div>
+          <div class="col-md-6 d-grid">
+            <button type="button" class="btn btn-success" onclick="getTotal()">Resumen</button>
+          </div>
+        </form>
+      </div>
+    </section>
   </main>
 
   <footer id="footer" class="pb-4 pt-4">
     <div class="container">
       <div class="row text-center align-items-center">
-        <div class="col-12 col-lg "><a href="#">Preguntas freguentes</a></div>
+        <div class="col-12 col-lg"><a href="#">Preguntas freguentes</a></div>
         <div class="col-12 col-lg"><a href="#">Contáctanos</a></div>
         <div class="col-12 col-lg"><a href="#">Prensa</a></div>
         <div class="col-12 col-lg"><a href="#">Conferencias</a></div>
@@ -200,5 +271,7 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  
+  <script src="main.js"></script>
 </body>
 </html>
